Style trending card within content section with correct font-size, colors and spacing using flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,6 @@ span.sb-icon,
 .header {
   grid-area: 1 / 2 / 2 / 3;
   display: grid;
-  /* grid-template-rows: repeat(2, 1fr); */
   gap: 12px;
   padding: 16px 44px;
   background-color: var(--white-color);
@@ -198,7 +197,6 @@ span.sb-icon,
   display: grid;
   grid-template-columns: 24px 5.5fr 24px 52px 1.4fr;
   grid-auto-rows: max-content;
-  /* height: 50px; */
   gap: 22px;
   align-items: center;
   align-content: center;
@@ -318,7 +316,6 @@ input[type="search"] {
 .sb-options a,
 .sb-settings a {
   display: grid;
-  /* width: 100%; */
   background-color: transparent;
   border: none;
   grid-template-columns: 50px auto;
@@ -390,7 +387,7 @@ span.priv {
   grid-area: 2 / 2 / 3 / 3;
   display: grid;
   grid-template-columns: 2.7fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: min-content min-content;
   padding: 38px 32px 32px 20px;
   gap: 22px;
   row-gap: 40px;
@@ -449,6 +446,11 @@ span.priv {
   color: var(--grey-color);
   line-height: 1.2;
   font-size: var(--h-btn-size);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
 }
 .project-block > div {
   font-size: 0;
@@ -497,7 +499,6 @@ span.priv {
 }
 
 .announce-list li {
-  /* border-bottom: 1px solid #d2d2d2; */
   color: var(--grey-color);
   padding: 0 6px;
   margin: 0 6px;
@@ -531,4 +532,31 @@ span.priv {
   height: 1px;
   border: 0;
   margin: 6px;
+}
+
+.trending-list li {
+  display: grid;
+  grid-template-columns: 1fr 3.83fr;
+  grid-auto-rows: auto;
+  row-gap: 6px;
+  column-gap: 12px;
+  color: var(--grey-color);
+}
+
+.trending-list li img {
+  border-radius: 50%;
+  grid-area: 1 / 1 / 3 / 2;
+  align-content: center;
+  justify-items: left;
+}
+
+.trending-list li h5 {
+  display: flex;
+  align-items: end;
+  color: var(--black-color);
+  font-size: 0.9rem;
+}
+
+.trending-list li p {
+  font-size: 0.9rem;
 }
